--- a/server.html
+++ b/server.html
@@ -78,7 +78,9 @@
 
         async function loadUsers() {
             try {
-                const { data: users, error } = await supabase.from('users').select('*').eq('nrc_status', 'pending');
+                const { data: users, error } = await supabase.from('users')
+                    .select('*')
+                    .eq('nrc_status', 'pending');
                 if (error) throw error;
                 const userList = document.getElementById('user-list');
                 userList.innerHTML = '';
@@ -88,8 +90,9 @@
                     item.className = 'user-item';
                     item.innerHTML = `
                         ID: ${user.id} | ဖုန်း: ${user.phone || 'N/A'}<br>
-                        NRC: ${user.nrc_region}/${user.nrc_town}/${user.nrc_type} ${user.nrc_number}<br>
-                        <img src="${user.nrc_front}" alt="Front"> <img src="${user.nrc_back}" alt="Back"> <img src="${user.nrc_selfie}" alt="Selfie"><br>
+                        NRC: ${user.nrc_region ? `${user.nrc_region}/${user.nrc_town}/${user.nrc_type} ${user.nrc_number}` : 'N/A'}<br>
+                        <img src="${user.nrc_front || ''}" alt="Front"> <img src="${user.nrc_back || ''}" alt="Back"> <img src="${user.nrc_selfie || ''}" alt="Selfie"><br>
+                        တင်သည့်အချိန်: ${user.submitted_at ? new Date(user.submitted_at).toLocaleString() : 'N/A'}<br>
                         <button class="approve-btn" onclick="updateNrcStatus(${user.id}, 'approved')">အတည်ပြု</button>
                         <button class="reject-btn" onclick="updateNrcStatus(${user.id}, 'rejected')">ငြင်းဆို</button>
                     `;
@@ -102,7 +105,9 @@
 
         async function updateNrcStatus(id, status) {
             try {
-                const { error } = await supabase.from('users').update({ nrc_status: status }).eq('id', id);
+                const { error } = await supabase.from('users')
+                    .update({ nrc_status: status })
+                    .eq('id', id);
                 if (error) throw error;
                 alert(`ID ${id} ကို ${status === 'approved' ? 'အတည်ပြု' : 'ငြင်းဆို'} ပြီးပါပြီ။`);
                 loadUsers();
@@ -123,7 +128,10 @@
                     return;
                 }
 
-                const { data: user, error: userError } = await supabase.from('users').select('*').eq('phone', phone).single();
+                const { data: user, error: userError } = await supabase.from('users')
+                    .select('*')
+                    .eq('phone', phone)
+                    .single();
                 if (userError) throw userError;
                 if (!user || user.nrc_status !== 'approved') {
                     alert('အကောင့်မရှိပါ သို့မဟုတ် NRC အတည်မပြုရသေးပါ။');
@@ -136,19 +144,21 @@
                     return;
                 }
 
-                const { error: updateError } = await supabase.from('users').update({ balance: newBalance }).eq('id', user.id);
+                const { error: updateError } = await supabase.from('users')
+                    .update({ balance: newBalance })
+                    .eq('id', user.id);
                 if (updateError) throw updateError;
-                const { error: insertError } = await supabase.from('transactions').insert({
-                    from_phone: type === 'withdraw' ? user.phone : 'server',
-                    to_phone: type === 'deposit' ? user.phone : 'server',
-                    amount: amount,
-                    note: `${type === 'deposit' ? 'ငွေသွင်း' : 'ငွေထုတ်'} by Server`,
-                    timestamp: new Date().toLocaleString('en-US', { timeZone: 'Asia/Yangon' })
-                });
+                const { error: insertError } = await supabase.from('transactions')
+                    .insert({
+                        from_phone: type === 'withdraw' ? user.phone : 'server',
+                        to_phone: type === 'deposit' ? user.phone : 'server',
+                        amount: amount,
+                        note: `${type === 'deposit' ? 'ငွေသွင်း' : 'ငွေထုတ်'} by Server`,
+                        timestamp: new Date().toLocaleString('en-US', { timeZone: 'Asia/Yangon' })
+                    });
                 if (insertError) throw insertError;
 
                 alert(`${type === 'deposit' ? 'ငွေသွင်း' : 'ငွေထုတ်'} ပြီးပါပြီ။ လက်ကျန်: ${newBalance} Ks`);
-                loadHistory();
             } catch (error) {
                 console.error('Deposit/Withdraw Error:', error.message);
                 alert('ငွေသွင်း/ထုတ် အမှားဖြစ်ပွားခဲ့သည်။');
@@ -157,7 +167,9 @@
 
         async function loadHistory() {
             try {
-                const { data: transactions, error } = await supabase.from('transactions').select('*').order('timestamp', { ascending: false });
+                const { data: transactions, error } = await supabase.from('transactions')
+                    .select('*')
+                    .order('timestamp', { ascending: false });
                 if (error) throw error;
                 const historyList = document.getElementById('history-list');
                 historyList.innerHTML = '';
@@ -176,6 +188,16 @@
         window.onload = () => {
             loadUsers();
             loadHistory();
+
+            // Real-Time Subscription for users table
+            supabase.channel('users-channel')
+                .on('postgres_changes', { event: '*', schema: 'public', table: 'users' }, () => loadUsers())
+                .subscribe();
+
+            // Real-Time Subscription for transactions table
+            supabase.channel('transactions-channel')
+                .on('postgres_changes', { event: 'INSERT', schema: 'public', table: 'transactions' }, () => loadHistory())
+                .subscribe();
         };
     </script>
 </body>
