--- a/public/index.html
+++ b/public/index.html
@@ -638,12 +638,18 @@
         async function loadHistory() {
             try {
                 const month = document.getElementById('month-filter').value;
-                const monthFilter = month === 'current' ? new Date().getMonth() : new Date().getMonth() - 1;
+                const now = new Date();
+                const year = now.getFullYear();
+                const monthFilter = month === 'current' ? now.getMonth() : now.getMonth() - 1;
+                const startDate = new Date(year, monthFilter, 1).toISOString();
+                const endDate = new Date(year, monthFilter + 1, 0).toISOString();
+
                 const { data: transactions, error } = await supabase
                     .from('transactions')
                     .select('*')
                     .or(`from_phone.eq.${currentUser.phone},to_phone.eq.${currentUser.phone}`)
-                    .gte('timestamp', new Date(new Date().setMonth(monthFilter)).toISOString().split('T')[0]);
+                    .gte('created_at', startDate)
+                    .lte('created_at', endDate);
                 if (error) throw error;
 
                 const historyList = document.getElementById('history-list');
@@ -671,51 +677,57 @@
                 document.getElementById('total-out').textContent = `${totalOut} Ks`;
             } catch (error) {
                 console.error('Load History Error:', error.message);
+                alert(`Error loading transaction history: ${error.message}`);
             }
         }
 
         async function printTransaction(transactionId) {
-            const { data: transaction, error } = await supabase
-                .from('transactions')
-                .select('*')
-                .eq('id', transactionId)
-                .single();
-            if (error) throw error;
+            try {
+                const { data: transaction, error } = await supabase
+                    .from('transactions')
+                    .select('*')
+                    .eq('id', transactionId)
+                    .single();
+                if (error) throw error;
 
-            const printWindow = window.open('', '_blank');
-            printWindow.document.write(`
-                <html>
-                <head>
-                    <title>Transaction Receipt</title>
-                    <style>
-                        body { font-family: 'Inter', sans-serif; margin: 20px; background: #fff; }
-                        .receipt { border: 5px solid #ffd700; padding: 20px; max-width: 600px; margin: 0 auto; background: #fff; }
-                        .logo { display: block; margin: 0 auto; width: 80px; height: 80px; }
-                        h1 { text-align: center; color: #ffd700; font-size: 1.5rem; margin-bottom: 20px; }
-                        p { font-size: 1rem; margin: 5px 0; color: #333; }
-                    </style>
-                </head>
-                <body>
-                    <div class="receipt">
-                        <img class="logo" src="https://github.com/Opper125/opper-payment/raw/main/logo.png" alt="OPPER Logo">
-                        <h1>OPPER Payment Transaction Receipt</h1>
-                        <p><strong>Amount:</strong> ${transaction.amount} Ks</p>
-                        <p><strong>From:</strong> ${transaction.from_phone}</p>
-                        <p><strong>To:</strong> ${transaction.to_phone}</p>
-                        <p><strong>Note:</strong> ${transaction.note || 'None'}</p>
-                        <p><strong>Time:</strong> ${transaction.timestamp}</p>
-                        <p><strong>Status:</strong> ${transaction.from_phone === currentUser.phone ? 'Sent' : 'Received'}</p>
-                    </div>
-                </body>
-                </html>
-            `);
-            printWindow.document.close();
+                const printWindow = window.open('', '_blank');
+                printWindow.document.write(`
+                    <html>
+                    <head>
+                        <title>Transaction Receipt</title>
+                        <style>
+                            body { font-family: 'Inter', sans-serif; margin: 20px; background: #fff; }
+                            .receipt { border: 5px solid #ffd700; padding: 20px; max-width: 600px; margin: 0 auto; background: #fff; }
+                            .logo { display: block; margin: 0 auto; width: 80px; height: 80px; }
+                            h1 { text-align: center; color: #ffd700; font-size: 1.5rem; margin-bottom: 20px; }
+                            p { font-size: 1rem; margin: 5px 0; color: #333; }
+                        </style>
+                    </head>
+                    <body>
+                        <div class="receipt">
+                            <img class="logo" src="https://github.com/Opper125/opper-payment/raw/main/logo.png" alt="OPPER Logo">
+                            <h1>OPPER Payment Transaction Receipt</h1>
+                            <p><strong>Amount:</strong> ${transaction.amount} Ks</p>
+                            <p><strong>From:</strong> ${transaction.from_phone}</p>
+                            <p><strong>To:</strong> ${transaction.to_phone}</p>
+                            <p><strong>Note:</strong> ${transaction.note || 'None'}</p>
+                            <p><strong>Time:</strong> ${transaction.timestamp}</p>
+                            <p><strong>Status:</strong> ${transaction.from_phone === currentUser.phone ? 'Sent' : 'Received'}</p>
+                        </div>
+                    </body>
+                    </html>
+                `);
+                printWindow.document.close();
 
-            setTimeout(() => {
-                printWindow.print();
-                html2pdf().from(printWindow.document.body).save(`Transaction_${transaction.id}.pdf`);
-                printWindow.close();
-            }, 500);
+                setTimeout(() => {
+                    printWindow.print();
+                    html2pdf().from(printWindow.document.body).save(`Transaction_${transaction.id}.pdf`);
+                    printWindow.close();
+                }, 500);
+            } catch (error) {
+                console.error('Print Transaction Error:', error.message);
+                alert(`Error printing transaction: ${error.message}`);
+            }
         }
 
         function updateStatus(status) {
